<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:background="@drawable/graybuttonbg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:fontFamily="@font/ubuntu"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="center" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/setting_lngspinner"
        android:fontFamily="@font/ubuntu"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:id="@+id/settings_cancel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:background="@drawable/buttonbg"
        android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:id="@+id/settings_ok"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:background="@drawable/buttonbg"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/apply"/>


    </LinearLayout>
    <TextView
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_text"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:gravity="center" />




</LinearLayout>