<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bluegraybg"
    android:gravity="center"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/about_title"
        android:textColor="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_version"
        android:text="@string/about_version"
        android:textColor="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <ImageView
        android:src="@drawable/logo"
        android:layout_width="200dp"
        android:layout_height="200dp" />
    <TextView
        android:text="@string/about_timestamp"
        android:textColor="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="https://shahabazimi.ir"
        android:textColor="@color/white"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColorLink="@color/white"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:text="https://github.com/ShahabGT/"
        android:textColor="@color/white"
        android:autoLink="web"
        android:textColorLink="@color/white"

        android:linksClickable="true"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:fontFamily="@font/ubuntu"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />


</LinearLayout>